Added more colors

--- a/Source/rainbowlib/src/main/res/values/colors.xml
+++ b/Source/rainbowlib/src/main/res/values/colors.xml
@@ -1,13 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorRed">#</color>
-    <color name="colorRed">#</color>
-    <color name="colorRed">#</color>
-    <color name="colorRed">#</color>
-    <color name="colorRed">#</color>
-    <color name="colorRed">#</color>
-    <color name="colorRed">#</color>
-    <color name="colorRed">#</color>
-    <color name="colorRed">#</color>
-    <color name="colorRed">#</color>
+    <color name="colorRed50">#FFEBEE</color>
+    <color name="colorRed100">#FFCDD2</color>
+    <color name="colorRed200">#EF9A9A</color>
+    <color name="colorRed300">#E57373</color>
+    <color name="colorRed400">#EF5350</color>
+    <color name="colorRed500">#F44336</color>
+    <color name="colorRed600">#E53935</color>
+    <color name="colorRed700">#D32F2F</color>
+    <color name="colorRed800">#C62828</color>
+    <color name="colorRed900">#B71C1C</color>
+    <color name="colorRedA100">#FF8A80</color>
+    <color name="colorRedA200">#FF5252</color>
+    <color name="colorRedA400">#FF1744</color>
+    <color name="colorRedA700">#D50000</color>
+    <color name="colorPink50">#FCE4EC</color>
+    <color name="colorPink100">#F8BBD0</color>
+    <color name="colorPink200">#F48FB1</color>
+    <color name="colorPink300">#F06292</color>
+    <color name="colorPink400">#EC407A</color>
+    <color name="colorPink500">#E91E63</color>
+    <color name="colorPink600">#D81B60</color>
+    <color name="colorPink700">#C2185B</color>
+    <color name="colorPink800">#AD1457</color>
+    <color name="colorPink900">#880E4F</color>
+    <color name="colorPinkA100">#FF80AB</color>
+    <color name="colorPinkA200">#FF4081</color>
+    <color name="colorPinkA400">#F50057</color>
+    <color name="colorPinkA700">#C51162</color>
+    <color name="colorPurple50">#F3E5F5</color>
+    <color name="colorPurple100">#E1BEE7</color>
+    <color name="colorPurple200">#CE93D8</color>
+    <color name="colorPurple300">#BA68C8</color>
+    <color name="colorPurple400">#AB47BC</color>
+    <color name="colorPurple500">#9C27B0</color>
+    <color name="colorPurple600">#8E24AA</color>
+    <color name="colorPurple700">#7B1FA2</color>
+    <color name="colorPurple800">#6A1B9A</color>
+    <color name="colorPurple900">#4A148C</color>
+    <color name="colorPurpleA100">#EA80FC</color>
+    <color name="colorPurpleA200">#E040FB</color>
+    <color name="colorPurpleA400">#D500F9</color>
+    <color name="colorPurpleA700">#AA00FF</color>
+    <color name="colorDeepPerple50">#EDE7F6</color>
+    <color name="colorDeepPerple100">#D1C4E9</color>
+    <color name="colorDeepPerple200">#B39DDB</color>
+    <color name="colorDeepPerple300">#9575CD</color>
+    <color name="colorDeepPerple400">#7E57C2</color>
+    <color name="colorDeepPerple500">#673AB7</color>
+    <color name="colorDeepPerple600">#5E35B1</color>
+    <color name="colorDeepPerple700">#512DA8</color>
+    <color name="colorDeepPerple800">#4527A0</color>
+    <color name="colorDeepPerple900">#311B92</color>
+    <color name="colorDeepPerpleA100">#B388FF</color>
+    <color name="colorDeepPerpleA200">#7C4DFF</color>
+    <color name="colorDeepPerpleA400">#651FFF</color>
+    <color name="colorDeepPerpleA700">#6200EA</color>
+    <color name="colorIndigo50">#E8EAF6</color>
+    <color name="colorIndigo100">#C5CAE9</color>
+    <color name="colorIndigo200">#9FA8DA</color>
+    <color name="colorIndigo300">#7986CB</color>
+    <color name="colorIndigo400">#5C6BC0</color>
+    <color name="colorIndigo500">#3F51B5</color>
+    <color name="colorIndigo600">#3949AB</color>
+    <color name="colorIndigo700">#303F9F</color>
+    <color name="colorIndigo800">#283593</color>
+    <color name="colorIndigo900">#1A237E</color>
+    <color name="colorIndigoA100">#8C9EFF</color>
+    <color name="colorIndigoA200">#536DFE</color>
+    <color name="colorIndigoA400">#3D5AFE</color>
+    <color name="colorIndigoA700">#304FFE</color>
+    <color name="colorBlue50">#E3F2FD</color>
+    <color name="colorBlue100">#BBDEFB</color>
+    <color name="colorBlue200">#90CAF9</color>
+    <color name="colorBlue300">#64B5F6</color>
+    <color name="colorBlue400">#42A5F5</color>
+    <color name="colorBlue500">#2196F3</color>
+    <color name="colorBlue600">#1E88E5</color>
+    <color name="colorBlue700">#1976D2</color>
+    <color name="colorBlue800">#1565C0</color>
+    <color name="colorBlue900">#0D47A1</color>
+    <color name="colorBlueA100">#82B1FF</color>
+    <color name="colorBlueA200">#448AFF</color>
+    <color name="colorBlueA400">#2979FF</color>
+    <color name="colorBlueA700">#2962FF</color>
+    <color name="colorLightBlue50">#E1F5FE</color>
+    <color name="colorLightBlue100">#B3E5FC</color>
+    <color name="colorLightBlue200">#81D4FA</color>
+    <color name="colorLightBlue300">#4FC3F7</color>
+    <color name="colorLightBlue400">#29B6F6</color>
+    <color name="colorLightBlue500">#03A9F4</color>
+    <color name="colorLightBlue600">#039BE5</color>
+    <color name="colorLightBlue700">#0288D1</color>
+    <color name="colorLightBlue800">#0277BD</color>
+    <color name="colorLightBlue900">#01579B</color>
+    <color name="colorLightBlueA100">#80D8FF</color>
+    <color name="colorLightBlueA200">#40C4FF</color>
+    <color name="colorLightBlueA400">#00B0FF</color>
+    <color name="colorLightBlueA700">#0091EA</color>
+    <color name="colorCyan50">#E0F7FA</color>
+    <color name="colorCyan100">#B2EBF2</color>
+    <color name="colorCyan200">#80DEEA</color>
+    <color name="colorCyan300">#4DD0E1</color>
+    <color name="colorCyan400">#26C6DA</color>
+    <color name="colorCyan500">#00BCD4</color>
+    <color name="colorCyan600">#00ACC1</color>
+    <color name="colorCyan700">#0097A7</color>
+    <color name="colorCyan800">#00838F</color>
+    <color name="colorCyan900">#006064</color>
+    <color name="colorCyanA100">#84FFFF</color>
+    <color name="colorCyanA200">#18FFFF</color>
+    <color name="colorCyanA400">#00E5FF</color>
+    <color name="colorCyanA700">#00B8D4</color>
+    <color name="colorTeal50">#E0F2F1</color>
+    <color name="colorTeal100">#B2DFDB</color>
+    <color name="colorTeal200">#80CBC4</color>
+    <color name="colorTeal300">#4DB6AC</color>
+    <color name="colorTeal400">#26A69A</color>
+    <color name="colorTeal500">#009688</color>
+    <color name="colorTeal600">#00897B</color>
+    <color name="colorTeal700">#00796B</color>
+    <color name="colorTeal800">#00695C</color>
+    <color name="colorTeal900">#004D40</color>
+    <color name="colorTealA100">#A7FFEB</color>
+    <color name="colorTealA200">#64FFDA</color>
+    <color name="colorTealA400">#1DE9B6</color>
+    <color name="colorTealA700">#00BFA5</color>
 </resources>
