Added all colors from Google Material collection

--- a/Source/rainbowlib/src/main/res/values/colors.xml
+++ b/Source/rainbowlib/src/main/res/values/colors.xml
@@ -126,4 +126,134 @@
     <color name="colorTealA200">#64FFDA</color>
     <color name="colorTealA400">#1DE9B6</color>
     <color name="colorTealA700">#00BFA5</color>
+    <color name="colorGreen50">#E8F5E9</color>
+    <color name="colorGreen100">#C8E6C9</color>
+    <color name="colorGreen200">#A5D6A7</color>
+    <color name="colorGreen300">#81C784</color>
+    <color name="colorGreen400">#66BB6A</color>
+    <color name="colorGreen500">#4CAF50</color>
+    <color name="colorGreen600">#43A047</color>
+    <color name="colorGreen700">#388E3C</color>
+    <color name="colorGreen800">#2E7D32</color>
+    <color name="colorGreen900">#1B5E20</color>
+    <color name="colorGreenA100">#B9F6CA</color>
+    <color name="colorGreenA200">#69F0AE</color>
+    <color name="colorGreenA400">#00E676</color>
+    <color name="colorGreenA700">#00C853</color>
+    <color name="colorLightGreen50">#F1F8E9</color>
+    <color name="colorLightGreen100">#DCEDC8</color>
+    <color name="colorLightGreen200">#C5E1A5</color>
+    <color name="colorLightGreen300">#AED581</color>
+    <color name="colorLightGreen400">#9CCC65</color>
+    <color name="colorLightGreen500">#8BC34A</color>
+    <color name="colorLightGreen600">#7CB342</color>
+    <color name="colorLightGreen700">#689F38</color>
+    <color name="colorLightGreen800">#558B2F</color>
+    <color name="colorLightGreen900">#33691E</color>
+    <color name="colorLightGreenA100">#CCFF90</color>
+    <color name="colorLightGreenA200">#B2FF59</color>
+    <color name="colorLightGreenA400">#76FF03</color>
+    <color name="colorLightGreenA700">#64DD17</color>
+    <color name="colorLime50">#F9FBE7</color>
+    <color name="colorLime100">#F0F4C3</color>
+    <color name="colorLime200">#E6EE9C</color>
+    <color name="colorLime300">#DCE775</color>
+    <color name="colorLime400">#D4E157</color>
+    <color name="colorLime500">#CDDC39</color>
+    <color name="colorLime600">#C0CA33</color>
+    <color name="colorLime700">#AFB42B</color>
+    <color name="colorLime800">#9E9D24</color>
+    <color name="colorLime900">#827717</color>
+    <color name="colorLimeA100">#F4FF81</color>
+    <color name="colorLimeA200">#EEFF41</color>
+    <color name="colorLimeA400">#C6FF00</color>
+    <color name="colorLimeA700">#AEEA00</color>
+    <color name="colorYellow50">#FFFDE7</color>
+    <color name="colorYellow100">#FFF9C4</color>
+    <color name="colorYellow200">#FFF59D</color>
+    <color name="colorYellow300">#FFF176</color>
+    <color name="colorYellow400">#FFEE58</color>
+    <color name="colorYellow500">#FFEB3B</color>
+    <color name="colorYellow600">#FDD835</color>
+    <color name="colorYellow700">#FBC02D</color>
+    <color name="colorYellow800">#F9A825</color>
+    <color name="colorYellow900">#F57F17</color>
+    <color name="colorYellowA100">#FFFF8D</color>
+    <color name="colorYellowA200">#FFFF00</color>
+    <color name="colorYellowA400">#FFEA00</color>
+    <color name="colorYellowA700">#FFD600</color>
+    <color name="colorAmber50">#FFF8E1</color>
+    <color name="colorAmber100">#FFECB3</color>
+    <color name="colorAmber200">#FFE082</color>
+    <color name="colorAmber300">#FFD54F</color>
+    <color name="colorAmber400">#FFCA28</color>
+    <color name="colorAmber500">#FFC107</color>
+    <color name="colorAmber600">#FFB300</color>
+    <color name="colorAmber700">#FFA000</color>
+    <color name="colorAmber800">#FF8F00</color>
+    <color name="colorAmber900">#FF6F00</color>
+    <color name="colorAmberA100">#FFE57F</color>
+    <color name="colorAmberA200">#FFD740</color>
+    <color name="colorAmberA400">#FFC400</color>
+    <color name="colorAmberA700">#FFAB00</color>
+    <color name="colorOrange50">#FFF3E0</color>
+    <color name="colorOrange100">#FFE0B2</color>
+    <color name="colorOrange200">#FFCC80</color>
+    <color name="colorOrange300">#FFB74D</color>
+    <color name="colorOrange400">#FFA726</color>
+    <color name="colorOrange500">#FF9800</color>
+    <color name="colorOrange600">#FB8C00</color>
+    <color name="colorOrange700">#F57C00</color>
+    <color name="colorOrange800">#EF6C00</color>
+    <color name="colorOrange900">#E65100</color>
+    <color name="colorOrangeA100">#FFD180</color>
+    <color name="colorOrangeA200">#FFAB40</color>
+    <color name="colorOrangeA400">#FF9100</color>
+    <color name="colorOrangeA700">#FF6D00</color>
+    <color name="colorDeepOrange50">#FBE9E7</color>
+    <color name="colorDeepOrange100">#FFCCBC</color>
+    <color name="colorDeepOrange200">#FFAB91</color>
+    <color name="colorDeepOrange300">#FF8A65</color>
+    <color name="colorDeepOrange400">#FF7043</color>
+    <color name="colorDeepOrange500">#FF5722</color>
+    <color name="colorDeepOrange600">#F4511E</color>
+    <color name="colorDeepOrange700">#E64A19</color>
+    <color name="colorDeepOrange800">#D84315</color>
+    <color name="colorDeepOrange900">#BF360C</color>
+    <color name="colorDeepOrangeA100">#FF9E80</color>
+    <color name="colorDeepOrangeA200">#FF6E40</color>
+    <color name="colorDeepOrangeA400">#FF3D00</color>
+    <color name="colorDeepOrangeA700">#DD2C00</color>
+    <color name="colorBrown50">#EFEBE9</color>
+    <color name="colorBrown100">#D7CCC8</color>
+    <color name="colorBrown200">#BCAAA4</color>
+    <color name="colorBrown300">#A1887F</color>
+    <color name="colorBrown400">#8D6E63</color>
+    <color name="colorBrown500">#795548</color>
+    <color name="colorBrown600">#6D4C41</color>
+    <color name="colorBrown700">#5D4037</color>
+    <color name="colorBrown800">#4E342E</color>
+    <color name="colorBrown900">#3E2723</color>
+    <color name="colorGray50">#FAFAFA</color>
+    <color name="colorGray100">#F5F5F5</color>
+    <color name="colorGray200">#EEEEEE</color>
+    <color name="colorGray300">#E0E0E0</color>
+    <color name="colorGray400">#BDBDBD</color>
+    <color name="colorGray500">#9E9E9E</color>
+    <color name="colorGray600">#757575</color>
+    <color name="colorGray700">#616161</color>
+    <color name="colorGray800">#424242</color>
+    <color name="colorGray900">#212121</color>
+    <color name="colorBlueGray50">#ECEFF1</color>
+    <color name="colorBlueGray100">#CFD8DC</color>
+    <color name="colorBlueGray200">#B0BEC5</color>
+    <color name="colorBlueGray300">#90A4AE</color>
+    <color name="colorBlueGray400">#78909C</color>
+    <color name="colorBlueGray500">#607D8B</color>
+    <color name="colorBlueGray600">#546E7A</color>
+    <color name="colorBlueGray700">#455A64</color>
+    <color name="colorBlueGray800">#37474F</color>
+    <color name="colorBlueGray900">#263238</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
